--- a/lualite.vcxproj.filters
+++ b/lualite.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\tzio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\tcode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\tauxlib.h">
@@ -114,6 +117,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\tzio.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tcode.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
