--- a/lualite.vcxproj.filters
+++ b/lualite.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\tcode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\lopcodes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\tauxlib.h">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\tcode.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\lopcodes.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
