--- a/lualite.vcxproj
+++ b/lualite.vcxproj
@@ -141,44 +141,44 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\lopcodes.cpp" />
-    <ClCompile Include="src\tcode.cpp" />
-    <ClCompile Include="src\tparser.cpp" />
-    <ClCompile Include="src\tzio.cpp" />
-    <ClCompile Include="src\tbaselib.cpp" />
-    <ClCompile Include="src\tinit.cpp" />
-    <ClCompile Include="src\tapi.cpp" />
-    <ClCompile Include="src\tauxlib.cpp" />
-    <ClCompile Include="src\tdo.cpp" />
-    <ClCompile Include="src\tfunc.cpp" />
-    <ClCompile Include="src\tgc.cpp" />
-    <ClCompile Include="src\tlex.cpp" />
-    <ClCompile Include="src\tobject.cpp" />
-    <ClCompile Include="src\tstate.cpp" />
-    <ClCompile Include="src\tstring.cpp" />
-    <ClCompile Include="src\ttable.cpp" />
-    <ClCompile Include="src\ttm.cpp" />
+    <ClCompile Include="src\lcode.cpp" />
+    <ClCompile Include="src\lparser.cpp" />
+    <ClCompile Include="src\lzio.cpp" />
+    <ClCompile Include="src\lbaselib.cpp" />
+    <ClCompile Include="src\linit.cpp" />
+    <ClCompile Include="src\lapi.cpp" />
+    <ClCompile Include="src\lauxlib.cpp" />
+    <ClCompile Include="src\ldo.cpp" />
+    <ClCompile Include="src\lfunc.cpp" />
+    <ClCompile Include="src\lgc.cpp" />
+    <ClCompile Include="src\llex.cpp" />
+    <ClCompile Include="src\lobject.cpp" />
+    <ClCompile Include="src\lstate.cpp" />
+    <ClCompile Include="src\lstring.cpp" />
+    <ClCompile Include="src\ltable.cpp" />
+    <ClCompile Include="src\ltm.cpp" />
     <ClCompile Include="src\lua.cpp" />
-    <ClCompile Include="src\tvm.cpp" />
+    <ClCompile Include="src\lvm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lopcodes.h" />
     <ClInclude Include="src\lualib.h" />
-    <ClInclude Include="src\tauxlib.h" />
-    <ClInclude Include="src\tcode.h" />
-    <ClInclude Include="src\tdo.h" />
-    <ClInclude Include="src\tfunc.h" />
-    <ClInclude Include="src\tgc.h" />
-    <ClInclude Include="src\tlex.h" />
-    <ClInclude Include="src\tlimits.h" />
-    <ClInclude Include="src\tobject.h" />
-    <ClInclude Include="src\tparser.h" />
-    <ClInclude Include="src\tstate.h" />
-    <ClInclude Include="src\tstring.h" />
-    <ClInclude Include="src\ttable.h" />
-    <ClInclude Include="src\ttm.h" />
+    <ClInclude Include="src\lauxlib.h" />
+    <ClInclude Include="src\lcode.h" />
+    <ClInclude Include="src\ldo.h" />
+    <ClInclude Include="src\lfunc.h" />
+    <ClInclude Include="src\lgc.h" />
+    <ClInclude Include="src\llex.h" />
+    <ClInclude Include="src\llimits.h" />
+    <ClInclude Include="src\lobject.h" />
+    <ClInclude Include="src\lparser.h" />
+    <ClInclude Include="src\lstate.h" />
+    <ClInclude Include="src\lstring.h" />
+    <ClInclude Include="src\ltable.h" />
+    <ClInclude Include="src\ltm.h" />
     <ClInclude Include="src\lua.h" />
-    <ClInclude Include="src\tvm.h" />
-    <ClInclude Include="src\tzio.h" />
+    <ClInclude Include="src\lvm.h" />
+    <ClInclude Include="src\lzio.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
