--- a/lualite.vcxproj.filters
+++ b/lualite.vcxproj.filters
@@ -18,55 +18,55 @@
     <ClCompile Include="src\lua.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tauxlib.cpp">
+    <ClCompile Include="src\lauxlib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tstate.cpp">
+    <ClCompile Include="src\lstate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tobject.cpp">
+    <ClCompile Include="src\lobject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\ttable.cpp">
+    <ClCompile Include="src\ltable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tgc.cpp">
+    <ClCompile Include="src\lgc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tstring.cpp">
+    <ClCompile Include="src\lstring.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\ttm.cpp">
+    <ClCompile Include="src\ltm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tlex.cpp">
+    <ClCompile Include="src\llex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tapi.cpp">
+    <ClCompile Include="src\lapi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tdo.cpp">
+    <ClCompile Include="src\ldo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tfunc.cpp">
+    <ClCompile Include="src\lfunc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tinit.cpp">
+    <ClCompile Include="src\linit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tbaselib.cpp">
+    <ClCompile Include="src\lbaselib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tvm.cpp">
+    <ClCompile Include="src\lvm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tparser.cpp">
+    <ClCompile Include="src\lparser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tzio.cpp">
+    <ClCompile Include="src\lzio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tcode.cpp">
+    <ClCompile Include="src\lcode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\lopcodes.cpp">
@@ -74,55 +74,55 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\tauxlib.h">
+    <ClInclude Include="src\lauxlib.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\lua.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tstate.h">
+    <ClInclude Include="src\lstate.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tobject.h">
+    <ClInclude Include="src\lobject.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\ttable.h">
+    <ClInclude Include="src\ltable.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tgc.h">
+    <ClInclude Include="src\lgc.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tlimits.h">
+    <ClInclude Include="src\llimits.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tstring.h">
+    <ClInclude Include="src\lstring.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\ttm.h">
+    <ClInclude Include="src\ltm.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tlex.h">
+    <ClInclude Include="src\llex.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tdo.h">
+    <ClInclude Include="src\ldo.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tfunc.h">
+    <ClInclude Include="src\lfunc.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\lualib.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tvm.h">
+    <ClInclude Include="src\lvm.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tparser.h">
+    <ClInclude Include="src\lparser.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tzio.h">
+    <ClInclude Include="src\lzio.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\tcode.h">
+    <ClInclude Include="src\lcode.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\lopcodes.h">
